--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,11 @@ run:
   #   vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
   skip-dirs-use-default: true
 
+  # Include non-test files tagged as test-only.
+  # Context: https://github.com/ava-labs/coreth/pull/597
+  build-tags:
+    - test
+
 linters:
   disable-all: true
   enable:
