--- a/.github/workflows/sync-subnet-evm-branch.yml
+++ b/.github/workflows/sync-subnet-evm-branch.yml
@@ -1,5 +1,8 @@
 name: "Sync Subnet EVM Branch" 
 on:
+  push:
+    branches:
+      - sync-subnet-evm-branch # Hack to trigger workflow
   workflow_dispatch:
       inputs:
         remoteBranch:
