--- a/.github/workflows/sync-subnet-evm-branch.yml
+++ b/.github/workflows/sync-subnet-evm-branch.yml
@@ -8,7 +8,6 @@ on:
         remoteBranch:
             description: "Subnet EVM Branch"
             required: true
-            default: "coreth-test-0"
 
 jobs:
     sync_branch:
@@ -27,7 +26,7 @@ jobs:
               git remote add -f subnet-evm https://github.com/ava-labs/subnet-evm
               git remote -v # Verify the new remote was added
         
-          - name: Fetch Remote Branch (${{ github.events.inputs.remoteBranch }})
+          - name: Fetch Remote Branch (${{ github.events.inputs.remoteBranch || 'coreth-test-0' }})
             run: |
-              git fetch ${{ github.events.inputs.remoteBranch }}
+              git fetch ${{ github.events.inputs.remoteBranch || 'coreth-test-0' }}
               git branch -a # Verify the new branch was fetched
