--- a/.github/workflows/sync-subnet-evm-branch.yml
+++ b/.github/workflows/sync-subnet-evm-branch.yml
@@ -26,7 +26,24 @@ jobs:
               git remote add -f subnet-evm https://github.com/ava-labs/subnet-evm
               git remote -v # Verify the new remote was added
         
+          # TODO: Can use default when we remove the push trigger hack
+          # TODO: Replace test branch with actual (eg, coreth)
           - name: Fetch Remote Branch (${{ github.events.inputs.remoteBranch || 'coreth-test-0' }})
             run: |
               git fetch ${{ github.events.inputs.remoteBranch || 'coreth-test-0' }}
               git branch -a # Verify the new branch was fetched
+
+          - name: Apply diff
+            run: |
+              ./scripts/apply_diff_and_rename.sh subnet-evm/${{ github.events.inputs.remoteBranch || 'coreth-test-0' }}
+
+          # TODO: Add subnet-evm commit hash
+          - name: Create Pull Request
+            uses: peter-evans/create-pull-request@v6
+            with:
+              commit-message: "Automated commit message"
+              branch: auto-sync-subnet-evm
+              title: "Sync Subnet EVM"
+              body: |
+                This PR was created automatically by a GitHub Action.
+              draft: true
