--- a/.github/workflows/sync-subnet-evm-branch.yml
+++ b/.github/workflows/sync-subnet-evm-branch.yml
@@ -23,13 +23,13 @@ jobs:
             run: |
               git remote add subnet-evm https://github.com/ava-labs/subnet-evm
         
-          # TODO: Can use default when we remove the push trigger hack
           # TODO: Replace test branch with actual (eg, coreth)
           - name: Fetch Remote Branch (${{ github.event.inputs.remoteBranch }})
+            id: fetch_remote_branch
             run: |
               git fetch subnet-evm ${{ github.event.inputs.remoteBranch }}
               git fetch subnet-evm coreth-diff-script
-              git branch -a # Verify the new branch was fetched
+              git rev-parse --short=8 subnet-evm/coreth-test-0 >> $GITHUB_OUTPUT
 
           # TODO: Remove this step when the script is checked in
           - name: Checkout script
@@ -45,13 +45,12 @@ jobs:
             run: |
               git checkout -- .github/workflows
 
-          # TODO: Add subnet-evm commit hash
           - name: Create Pull Request
             uses: peter-evans/create-pull-request@v6
             with:
-              commit-message: "Automated commit message"
-              branch: auto-sync-subnet-evm
-              title: "Sync Subnet EVM"
+              commit-message: "Sync subnet-evm to ${{ steps.fetch_remote_branch.outputs.result }}"
+              branch: sync-subnet-evm-${{ steps.fetch_remote_branch.outputs.result }}
+              title: "Sync Subnet EVM to ${{ steps.fetch_remote_branch.outputs.result }}"
               body: |
                 This PR was created automatically by a GitHub Action.
               draft: true
