--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,10 @@ jobs:
         run: echo "TIMEOUT=1200s" >> "$GITHUB_ENV"
       - run: go mod download
         shell: bash
+      - name: Mocks are up to date
+        run: |
+          ./scripts/mock.gen.sh
+          git diff --exit-code
       - run: ./scripts/build.sh evm
         shell: bash
       - run: ./scripts/build_test.sh
