--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,7 @@ jobs:
       - name: go mod tidy
         run: |
           go mod tidy
+          git diff --exit-code
       - name: Mocks are up to date
         shell: bash
         run: |
