--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -2,7 +2,7 @@ name: labels
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - .github/labels.yml
       - .github/workflows/labels.yml
