--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,8 +38,7 @@ issues:
       text: "SA1019: rand\\.(Seed|Read) has been deprecated since Go 1\\.20"
       linters:
         - staticcheck
-
-    - path-except: "(plugin\\/.+\\.go|.+_ext\\.go)"
+    - path-except: "(_ext|plugin\\/.+|libevm.*)\\.go"
       linters:
         - errcheck
         - errorlint
