--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,7 +5,7 @@ run:
   tests: true
   # default is true. Enables skipping of directories:
   #   vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
-  skip-dirs-use-default: true
+  issues.exclude-dirs-use-default: true
   # Include non-test files tagged as test-only.
   # Context: https://github.com/ava-labs/avalanchego/pull/3173
 
