--- a/.github/workflows/sync-subnet-evm-branch.yml
+++ b/.github/workflows/sync-subnet-evm-branch.yml
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-go@v5
         with:
-          go-version: "~1.23.6"
+          go-version-file: "go.mod"
