--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
       - run: ./scripts/lint_allowed_eth_imports.sh
         shell: bash
       - name: Run linters
+        shell: bash
         run: ./scripts/lint.sh
       - name: Run shellcheck
         shell: bash
