--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,6 +39,6 @@ issues:
   exclude-rules:
     # Exclude unused geth symbols from ethclient/ethclient.go to simplify upgrading Geth to a newer version.
     - path: "ethclient\\/ethclient\\.go"
-      text: "(type `rpcProgress`|func `(*rpcProgress).toSyncProgress`) is unused"
+      text: "(type `rpcProgress`|func `\\(\\*rpcProgress\\)\\.toSyncProgress`\\) is unused"
       linters:
         - unused
