--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,6 +134,7 @@ jobs:
         uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@86c0b96e8e07347f66d008faac50af1b2d3cecc9
         with:
           run: ./scripts/tests.e2e.sh
+          run_env: AVALANCHEGO_CLONE_PATH=avalanchego
           prometheus_username: ${{ secrets.PROMETHEUS_ID || '' }}
           prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
           loki_username: ${{ secrets.LOKI_ID || '' }}
@@ -166,16 +167,12 @@ jobs:
         env:
           AVALANCHEGO_CLONE_PATH: warp-avalanchego
       - name: Run Warp E2E Tests
-        run: ./scripts/run_ginkgo_warp.sh
-        env:
-          AVALANCHEGO_BUILD_PATH: warp-avalanchego/build
-      # - name: Run Warp E2E Tests
-      #   uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@6e04bc0ac1d3d3cd1d0bf17c55a4eda41d094e88
-      #   with:
-      #     run: ./scripts/run_ginkgo_warp.sh
-      #     run_env: AVALANCHEGO_BUILD_PATH=warp-avalanchego
-      #     artifact_prefix: warp
-      #     prometheus_username: ${{ secrets.PROMETHEUS_ID || '' }}
-      #     prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
-      #     loki_username: ${{ secrets.LOKI_ID || '' }}
-      #     loki_password: ${{ secrets.LOKI_PASSWORD || '' }}
+        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@6e04bc0ac1d3d3cd1d0bf17c55a4eda41d094e88
+        with:
+          run: ./scripts/run_ginkgo_warp.sh
+          run_env: AVALANCHEGO_BUILD_PATH=warp-avalanchego/build
+          artifact_prefix: warp
+          prometheus_username: ${{ secrets.PROMETHEUS_ID || '' }}
+          prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
+          loki_username: ${{ secrets.LOKI_ID || '' }}
+          loki_password: ${{ secrets.LOKI_PASSWORD || '' }}
