--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
         with:
           repository: ${{ github.event.inputs.avalanchegoRepo }}
           ref: ${{ github.event.inputs.avalanchegoBranch }}
-          path: warp-avalanchego
+          path: /tmp/e2e/warp/avalanchego
           token: ${{ secrets.AVALANCHE_PAT }}
       - uses: actions/setup-go@v5
         with:
@@ -167,10 +167,10 @@ jobs:
         env:
           AVALANCHEGO_CLONE_PATH: warp-avalanchego
       - name: Run Warp E2E Tests
-        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@6e04bc0ac1d3d3cd1d0bf17c55a4eda41d094e88
+        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@86c0b96e8e07347f66d008faac50af1b2d3cecc9
         with:
           run: ./scripts/run_ginkgo_warp.sh
-          run_env: AVALANCHEGO_BUILD_PATH=warp-avalanchego/build
+          run_env: AVALANCHEGO_BUILD_PATH=/tmp/e2e/warp/avalanchego
           artifact_prefix: warp
           prometheus_username: ${{ secrets.PROMETHEUS_ID || '' }}
           prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
