--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,11 +98,11 @@ jobs:
         with:
           go-version-file: "go.mod"
       - name: Build AvalancheGo and update Coreth dependency
-        run: ./scripts/build_avalanchego_with_coreth.sh
+        run: ./scripts/run_task.sh build-avalanchego-with-coreth
       - name: Run e2e tests
         uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@ce450499b7d7c3f7b8927185b6a7b778856a702e
         with:
-          run: ./scripts/tests.e2e.sh
+          run: ./scripts/run_task.sh test-e2e
           run_env: AVALANCHEGO_CLONE_PATH=avalanchego
           prometheus_username: ${{ secrets.PROMETHEUS_ID || '' }}
           prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
@@ -132,7 +132,7 @@ jobs:
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: mv avalanchego /tmp/e2e/warp/avalanchego
       - name: Build AvalancheGo and update Coreth dependency
-        run: ./scripts/build_avalanchego_with_coreth.sh
+        run: ./scripts/run_task.sh build-avalanchego-with-coreth
         env:
           AVALANCHEGO_CLONE_PATH: /tmp/e2e/warp/avalanchego
       - name: Run Warp E2E Tests
