--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
       - name: Check go.mod and go.sum are up-to-date
         run: ./scripts/run_task.sh check-go-mod-tidy
       - name: Ensure consistent avalanchego version
+        env:
+          GITHUB_TOKEN: ${{ secrets.AVALANCHE_PAT }}
         run: ./scripts/run_task.sh check-avalanchego-version
 
   unit_test:
