ci: use github token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: ./scripts/run_task.sh check-go-mod-tidy
       - name: Ensure consistent avalanchego version
         env:
-          GITHUB_TOKEN: ${{ secrets.AVALANCHE_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./scripts/run_task.sh check-avalanchego-version
 
   unit_test:
