--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,5 +6,6 @@
 
 # review whenever someone opens a pull request.
 
-* @ava-labs/platform-evm
+* @ava-labs/platform-evm-maintainer
+/triedb/firewood/ @alarso16 @ava-labs/platform-evm-maintainer
 
