--- a/.extra-golangci.yml
+++ b/.extra-golangci.yml
@@ -40,7 +40,7 @@ formatters:
         - standard
         - default
         - blank
-        - prefix(github.com/ava-labs/avalanchego)
+        - prefix(github.com/ava-labs/coreth)
         - alias
         - dot
       custom-order: true
