--- a/.avalanche-golangci.yml
+++ b/.avalanche-golangci.yml
@@ -52,13 +52,13 @@ linters:
   default: none
   enable:
     - asciicheck
-    # - bodyclose
+    - bodyclose
     - copyloopvar
     # - depguard
     # - errcheck
     - errorlint
     # - forbidigo
-    # - goconst
+    - goconst
     # - gocritic
     - goprintffuncname
     # - gosec
@@ -68,7 +68,7 @@ linters:
     - misspell
     - nakedret
     # - nilerr
-    # - noctx
+    - noctx
     - nolintlint
     - perfsprint
     # - prealloc
@@ -80,7 +80,7 @@ linters:
     # - testifylint
     - unconvert
     # - unparam
-    # - unused
+    - unused
     - usestdlibvars
     - whitespace
   settings:
