enable lint testifylint

--- a/.avalanche-golangci.yml
+++ b/.avalanche-golangci.yml
@@ -77,7 +77,7 @@ linters:
     - spancheck
     # - staticcheck
     - tagalign
-    # - testifylint
+    - testifylint
     - unconvert
     - unparam
     - unused
