lint enable gosec

--- a/.avalanche-golangci.yml
+++ b/.avalanche-golangci.yml
@@ -61,7 +61,7 @@ linters:
     - goconst
     - gocritic
     - goprintffuncname
-    # - gosec
+    - gosec
     - govet
     - importas
     - ineffassign
