--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Build AvalancheGo and update Coreth dependency
         run: ./scripts/run_task.sh build-avalanchego-with-coreth
       - name: Run e2e tests
-        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@cc3242f48a6262c52057e98a85d6cf8184dfaca3
+        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@@24aa8901931ee4fb91f3bd9adbdb7a9613980a4d
         with:
           run: ./scripts/run_task.sh test-e2e
           run_env: AVALANCHEGO_CLONE_PATH=avalanchego
@@ -138,7 +138,7 @@ jobs:
         env:
           AVALANCHEGO_CLONE_PATH: /tmp/e2e/warp/avalanchego
       - name: Run Warp E2E Tests
-        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@cc3242f48a6262c52057e98a85d6cf8184dfaca3
+        uses: ava-labs/avalanchego/.github/actions/run-monitored-tmpnet-cmd@@24aa8901931ee4fb91f3bd9adbdb7a9613980a4d
         with:
           run: ./scripts/run_task.sh test-e2e-warp-ci
           run_env: AVALANCHEGO_BUILD_PATH=/tmp/e2e/warp/avalanchego/build
