--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,9 +5,7 @@
 version: '3'
 
 env:
-  BASEDIR: '{{.BASEDIR | default "/tmp/e2e-test"}}'
-  AVALANCHEGO_BUILD_PATH: '{{.AVALANCHEGO_BUILD_PATH | default "/tmp/e2e-test/avalanchego"}}'
-  DATA_DIR: '{{.DATA_DIR | default "/tmp/e2e-test/coreth-data"}}'
+  AVALANCHEGO_BUILD_PATH: '{{.AVALANCHEGO_BUILD_PATH | default (printf "%s/avalanchego/build" .TASKFILE_DIR) }}'
 
 tasks:
   default: ./scripts/run_task.sh --list
@@ -128,7 +126,7 @@ tasks:
 
   test-e2e-warp:
     desc: Run end-to-end warp tests using Ginkgo test framework
-    cmd: ./scripts/run_ginkgo_warp.sh # ci.yml
+    cmd: bash -x ./scripts/run_ginkgo_warp.sh # ci.yml
 
   test-e2e-warp-ci: # consolidated test-e2e-warp
     desc: Run E2E warp tests with CI setup
